Add new templates and CSS for Getting Started page. (#215)

--- a/gobotany/site/templates/gobotany/_about_navigation.html
+++ b/gobotany/site/templates/gobotany/_about_navigation.html
@@ -6,7 +6,7 @@
                         Botany</a></h4>
             </div>
             <div class="section">
-                {% url simplekey-help-start as u %}
+                {% url site-getting-started as u %}
                 <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Getting
                         Started with the Simple Key</a></h4>
             </div>
