--- a/gobotany/site/templates/gobotany/about.html
+++ b/gobotany/site/templates/gobotany/about.html
@@ -6,7 +6,7 @@
     require(['site/about']);
 {% endblock %}
 
-{% block body_attributes %}id="about" class="app about"{% endblock %}
+{% block body_attributes %}id="about" class="about"{% endblock %}
 
 {% block main_content %}
     <h1>About Go Botany</h1>
